버디 디비 연동까지
user_id 넣으면 일기보임